--- a/views/editprofile.ejs
+++ b/views/editprofile.ejs
@@ -5,24 +5,37 @@
     <a href="/" class="navbar-button navbar-button-left">Home</a>
   </div>
 </nav>
-<div class="login-container">
+<div class="edit-profile-container">
 
   <div class="form-wrapper">
     <form action="/edit" method="POST" enctype="multipart/form-data">
-        <h3 class="new-account-header">Edit your profile</h3>
+        <h3 class="edit-profile-header">Edit your profile</h3>
         <div class="form-group">
 
-          <input type="text" class="basic-form" id ="username" name="username" value="<%= user.username %>" placeholder="username">
-          <input type="text" class="basic-form" id="name" name="name" value="<%= user.name %>" placeholder="name">
-          <input type="text" class="basic-form" id="mobile" name="phone" value="<%= user.phone %>" placeholder="mobile">
-          <input type="text" class="basic-form" id="city" name="city" value="<%= user.city %>" placeholder="city">
-          <input type="text" class="basic-form" id="country" name="country" value="<%= user.country %>" placeholder="country">
-          <input type="number" class="basic-form" id="age" name="age" value="<%= user.age %>" placeholder="age">
-          <input type="text" class="basic-form" id="gender" name="gender" value="<%= user.gender %>"  placeholder="gender">
-          <div class="upload-file">
-            <label for="image">Profile picture</label></br>
-            <input type="file" class="upload" id="profile_image" name="profile_image" value="">
+          <div class="form-left">
+            <label class="label-form" for="username">Username</label>
+            <input type="text" class="profile-form" id ="username" name="username" value="<%= user.username %>" placeholder="username">
+            <label for="name">Name</label>
+            <input type="text" class="profile-form" id="name" name="name" value="<%= user.name %>" placeholder="name">
+            <label for="phone">Phone</label>
+            <input type="text" class="profile-form" id="mobile" name="phone" value="<%= user.phone %>" placeholder="mobile">
+            <label for="city">City</label>
+            <input type="text" class="profile-form" id="city" name="city" value="<%= user.city %>" placeholder="city">
+
           </div>
+          <div class="right">
+            <label for="country">Country</label>
+            <input type="text" class="profile-form" id="country" name="country" value="<%= user.country %>" placeholder="country">
+            <label for="age">Age</label>
+            <input type="number" class="profile-form" id="age" name="age" value="<%= user.age %>" placeholder="age">
+            <label for="gender">Gender</label>
+            <input type="text" class="profile-form" id="gender" name="gender" value="<%= user.gender %>"  placeholder="gender">
+            <div class="upload-file">
+              <label for="image">Profile picture</label></br>
+              <input type="file" class="upload" id="profile_image" name="profile_image" value="" >
+            </div>
+          </div>
+
 
 
         </div>
