last commit of thursday night, add a lot of new styles and html modifications

--- a/views/allbooks.ejs
+++ b/views/allbooks.ejs
@@ -41,7 +41,7 @@
   <nav class="books-navbar">
     <a href="/">My Books</a>
     <a href="/available-books">Available Books</a>
-    <a href="/all-books">All Books</a>
+    <p>All Books</p>
     <a href="/messages">Messages</a>
   </nav>
 
