--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -6,9 +6,11 @@
 </nav>
 <div class="login-container">
 
-  <div class="form-wrapper">
-
+  <div class="welcome-box">
     <h2 class="welcome-message">Nice to see you here!</h2>
+  </div>
+
+  <div class="form-wrapper">
 
     <form action="/login" method="POST" id="login-form">
 
@@ -35,10 +37,3 @@
   </div>
 
 </div>
-
-<!-- <footer class="footer">
-  <div class="footer-wrapper">
-    <p class="footer-quote">“A book lying idle on a shelf is wasted ammunition. Like money, books must be kept in constant circulation... A book is not only a friend, it makes friends for you. When you have possessed a book with mind and spirit, you are enriched. But when you pass it on you are enriched threefold.”</p>
-    <p class="footer-quote-author">Henry Miller</p>
-  </div>
-</footer> -->
