--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -5,10 +5,15 @@
   </div>
 </nav>
 <div class="login-container">
+
+  <div class="welcome-box">
+    <h2 class="welcome-message">Share your books and meet other readers</h2>
+  </div>
+
+
   <div class="form-wrapper">
 
 
-    <h2 class="welcome-message">Share your books and meet other readers</h2>
     <form action="/signup" method="POST" id="login-form">
 
         <div class="form-group">
@@ -32,10 +37,3 @@
   </div>
 
 </div>
-
-<!-- <footer class="footer">
-  <div class="footer-wrapper">
-    <p class="footer-quote">“A book lying idle on a shelf is wasted ammunition. Like money, books must be kept in constant circulation... A book is not only a friend, it makes friends for you. When you have possessed a book with mind and spirit, you are enriched. But when you pass it on you are enriched threefold.”</p>
-    <p class="footer-quote-author">Henry Miller</p>
-  </div>
-</footer> -->
