--- a/views/addbook.ejs
+++ b/views/addbook.ejs
@@ -11,7 +11,7 @@
       <form action="/newbook" method="POST" enctype="multipart/form-data">
 
           <h3 class="new-account-header">Add your book</h3>
-          <div class="form-group">
+          <div class="add-book-box">
             <input type="text" class="basic-form" name="title" placeholder="title" required="">
             <input type="text" class="basic-form" name="author" placeholder="author" required="">
             <input type="text" class="basic-form" name="genre" placeholder="genre">
@@ -19,9 +19,12 @@
             <input type="hidden" class="basic-form" name="id" placeholder="bookid">
             <input type="hidden" class="basic-form" name="bookPicture" placeholder="bookid">
             <textarea class="description-form" name="description" placeholder="description"></textarea>
-            <label for="available">This book will be shared</label> <br>
-              <input type="radio" name="available" value="1" required="" checked="checked"> Yes <br>
-              <!-- <input type="radio" name="available" value="0"> No -->
+            <div class="available-check">
+              <label for="available">This book will be shared</label> <br>
+                <input type="radio" name="available" value="1" required="" checked="checked"> Yes <br>
+            </div>
+
+
             <div class="add-file">
               <label for="cover">Upload a cover</label>
               <input type="file" class="upload" id="cover" name="cover">
@@ -30,7 +33,10 @@
           </div>
 
           <button type="submit" class="send-button">Add</button>
-          <a href="/" class="cancel-button">Cancel</a>
+          <div class="cancel-button">
+            <a href="/">Cancel</a>
+          </div>
+
       </form>
 
 
