--- a/views/editbook.ejs
+++ b/views/editbook.ejs
@@ -7,25 +7,40 @@
 </nav>
 <div class="login-container">
 
+  <div class="edit-header-box">
+    <h3 class="edit-profile-header">Edit <span style="font-style:italic">"<%= book.title %>"</span></h3>
+  </div>
+
   <div class="form-wrapper">
 
     <form action="/<%= book._id %>" method="POST" id="login-form" enctype="multipart/form-data">
 
-        <h3 class="new-account-header">Edit "<%= book.title %>"</h3>
-        <div class="form-group">
-
+        <div class="edit-book-box">
+          <label for="Title">Title</label>
           <input type="text" class="basic-form" name="title" placeholder="title" value="<%= book.title %>">
+          <label for="Author">Author</label>
           <input type="text" class="basic-form" name="author" placeholder="author" value="<%= book.author %>">
+          <label for="Genre">Genre</label>
           <input type="text" class="basic-form" name="genre" placeholder="genre" value="<%= book.genre %>">
+          <label for="Pages">Pages</label>
           <input type="text" class="basic-form" name="pages" placeholder="number of pages" value="<%= book.pages %>">
+          <label for="Description">Description</label>
           <textarea class="description-form" name="name" placeholder="description" value="<%= book.description %>"></textarea>
-          <input type="file" class="basic-form" name="cover" id="cover" placeholder="upload cover" value="<%= book.cover %>">
+
+          <label for="cover">Upload cover</label>
+          <input type="file" class="basic-form upload-button" name="cover" id="cover" placeholder="upload cover" value="<%= book.cover %>">
+
           <input type="hidden" class="basic-form" name="id" placeholder="bookid" value="<%= book._id %>">
           <input type="hidden" class="basic-form" name="bookPicture" placeholder="bookid" value="<%= book.picture %>">
         </div>
 
-        <button type="submit" class="send-button">Save</button>
-        <a href="/" class="cancel-button" id="editbook-cancel">Cancel</a>
+        <div class="form-buttons">
+          <button type="submit" class="send-button">Save</button>
+          <!-- <div class="cancel-button">
+            <a href="/">Cancel</a>
+          </div> -->
+        </div>
+
 
 
     </form>
