--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
   </div>
 
   <nav class="books-navbar">
-    <a>My Books</a>
+    <p>My Books</p>
     <a href="/available-books">Available Books</a>
     <a href="/all-books">All Books</a>
     <a href="/messages">Messages</a>
