--- a/views/showbook.ejs
+++ b/views/showbook.ejs
@@ -7,21 +7,36 @@
 </nav>
 <div class="login-container">
 
-  <div class="form-wrapper">
-        <h3 class="new-account-header">Book details</h3>
-        <div class="form-group">
-          <img src="/<%= book.picture %>" alt="book cover" id="showbook-cover">
-          <section id="showbook-text">
-          <p><span>Title:</span> <%= book.title %><p>
-          <p><span>Author:</span> <%= book.author %><p>
-          <p><span>Genre:</span> <%= book.genre %><p>
-          <p><span>Pages:</span> <%= book.pages %><p>
-          <p><span>Description:</span><%= book.description %><p>
-          </section>
+  <div class="edit-header-box">
+    <h3 class="edit-profile-header"><%=book.title %></h3>
+  </div>
 
 
+  <div class="show-book-wrapper">
 
-        </div>
+    <div class="show-image">
+      <img src="/<%= book.picture %>" alt="book cover">
+    </div>
+
+    <div class="book-specs">
+
+      <h4 class="book-subheader"> Title </h4>
+      <p><%= book.title %><p>
+
+      <h4 class="book-subheader"> Author </h4>
+      <p><%= book.author %><p>
+
+      <h4 class="book-subheader"> Genre </h4>
+      <p><%= book.genre %><p>
+
+      <h4 class="book-subheader"> Pages </h4>
+      <p><%= book.pages %><p>
+
+      <h4 class="book-subheader"> Description </h4>
+      <p><%= book.description %><p>
+
+    </div>
+
 
   </div>
 
