delete profile functionality added

--- a/views/editprofile.ejs
+++ b/views/editprofile.ejs
@@ -40,6 +40,9 @@
           </div>
         </div>
         <button type="submit" class="send-button">Save</button>
+        <div class="cancel-button" id="delete-profile">
+          <a href="/<%=user._id%>/deleteprofile">Delete profile</a>
+        </div>
         <!-- <div class="cancel-button">
           <a href="/">Cancel</a>
         </div> -->
