--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -326,6 +326,9 @@ cancel-button:hover {
   color: #fff;
 }
 
+#delete-profile a {
+  text-align: center;
+}
 
 /*----------------------NEW BOOK-------------------*/
 
