inbox and sent messages added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,8 @@
     <p>My Books</p>
     <a href="/available-books">Available Books</a>
     <a href="/all-books">All Books</a>
-    <a href="/messages">Messages</a>
+    <a href="/inbox">Inbox</a>
+    <a href="/sentmessages">Sent messages</a>
   </nav>
 
 
