--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -755,7 +755,25 @@ color:inherit;
   text-decoration: none;
 }
 
+/*----------------------SENT MESSAGES VIEW AND INBOX VIEW---------------------*/
+.delete-message-button {
+  width: 80px;
+  height: 35px;
+  margin-top: 1rem;
+  outline: none;
+  border: none;
+  font-size: 14px;
+  background: #a32626;
+  /*border-radius: 5px 5px 5px 5px;*/
+  cursor: pointer;
+  display: flex;
+  color: white;
+}
 
+.delete-message-button a {
+  margin: 0.5rem auto;
+  text-decoration: none;
+}
 
 /*//////////////////////////////////////////////////////////////*/
 /*--------------MEDIA QUERIES-------------------------------*/
