add share books functionality and change in mybooks and available

--- a/views/addbook.ejs
+++ b/views/addbook.ejs
@@ -7,10 +7,13 @@
 </nav>
 <div class="container">
 
+    <div class="edit-header-box">
+      <h3 class="new-account-header">Add your book</h3>
+    </div>
+    
     <div class="form-wrapper">
       <form action="/newbook" method="POST" enctype="multipart/form-data">
 
-          <h3 class="new-account-header">Add your book</h3>
           <div class="add-book-box">
             <input type="text" class="basic-form" name="title" placeholder="title" required="">
             <input type="text" class="basic-form" name="author" placeholder="author" required="">
