--- a/views/sharebook.ejs
+++ b/views/sharebook.ejs
@@ -37,6 +37,15 @@
 
     </div>
 
+    <form action="/<%=book._id%>/sharebook" method="POST">
+      <label for="userchoice">Who do you share this book with?</label>
+      <select name="user">
+        <% users.forEach((user) => { %>
+          <option value="<%=user.id%>"><%=user.username%></option>
+        <% }) %>
+      </select>
+      <button type="submit" class="send-button">Share</button>
+    </form>
 
   </div>
 
