--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -501,6 +501,7 @@ cancel-button:hover {
 
 .mybooks-wrapper {
   width: 100%;
+  min-height: 300px;
   margin: 0px auto;
   border: 1px solid #e9e9e9;
   padding: 10px;
