--- a/views/allbooks.ejs
+++ b/views/allbooks.ejs
@@ -42,7 +42,8 @@
     <a href="/">My Books</a>
     <a href="/available-books">Available Books</a>
     <p>All Books</p>
-    <a href="/messages">Messages</a>
+    <a href="/inbox">Inbox</a>
+    <a href="/sentmessages">Sent messages</a>
   </nav>
 
   <div class="mybooks-wrapper">
