--- a/views/availablebooks.ejs
+++ b/views/availablebooks.ejs
@@ -39,7 +39,8 @@
     <a href="/">My Books</a>
     <p>Available Books</p>
     <a href="/all-books">All Books</a>
-    <a href="/messages">Messages</a>
+    <a href="/inbox">Inbox</a>
+    <a href="/sentmessages">Sent messages</a>
   </nav>
 
   <div class="mybooks-wrapper">
